--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     "locomotive-mongoose": "~0.1.0",
     "ejs-locals": "~1.0.2",
     "passport": "~0.1.18",
-    "mongoose-types": "~1.0.3"
+    "mongoose-types": "~1.0.3",
+    "passport-google-oauth": "~0.1.5",
+    "passport-local": "~0.1.6",
+    "passport-twitter": "~1.0.2",
+    "passport-facebook": "~1.0.2"
   }
 }
