--- a/package.json
+++ b/package.json
@@ -16,6 +16,13 @@
     "passport-google-oauth": "~0.1.5",
     "passport-local": "~0.1.6",
     "passport-twitter": "~1.0.2",
-    "passport-facebook": "~1.0.2"
+    "passport-facebook": "~1.0.2",
+    "oauth2-provider": "~1.3.0",
+    "unirest": "~0.1.1",
+    "async": "~0.2.10",
+    "socks5-http-client": "~0.1.6",
+    "socksified": "0.0.2",
+    "node-curl": "~0.3.1",
+    "curlrequest": "~0.4.1"
   }
 }
